--- a/index.html
+++ b/index.html
@@ -3,76 +3,185 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOJA STRONA</title>
+    <title>Strona Startowa</title>
     <style>
-        /* Dodaj stylizację według potrzeb */
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
         }
         header {
-            background-color: #080101;
-            color: rgb(0, 0, 0);
+            background-color: #635858;
+            color: #fff;
+            padding: 10px;
             text-align: center;
-            padding: 20px;
         }
         nav {
             background-color: #444;
-            color: white;
             text-align: center;
             padding: 10px;
         }
         nav a {
+            color: #fff;
             text-decoration: none;
-            color: white;
             margin: 10px;
         }
         section {
             padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
         }
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #444;
+            color: #fff;
             text-align: center;
             padding: 10px;
+        }
+        table {
+            width: 80%;
+            margin: 0 auto;
+            border-collapse: collapse;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+        th, td {
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #3498db;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(odd) {
+            background-color: #e5e5e5;
+        }
+        td:first-child {
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
+        td:last-child {
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+        .header2 {
+            text-align: center;
+            font-size: 40px;
+        }
+        .header3 {
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="giphy.gif" alt="Logo Firmy" style="width: 400px; height: 300px;">
-        <h1>Moje Logo</h1>
-        <img src="giphy.gif" alt="Zdjęcie" style="width: 0px; height: 0px;">
-        <p>Siema</p>
+        <img src="elo.jpg" alt="elo.jpg" width="600" height="auto">
+        <h1>Maksymilian Lipiec</h1>
     </header>
-    <nav>
-        <a href="https://www.mercedes-benz.pl/passengercars.html">O Nas</a>
-        <a href="https://www.mercedes-benz.pl/passengercars/services/offers.html">Serwis</a>
-        <a href="https://www.frelik.mercedes-benz.pl/passengercars/about-us/contact.html?gclid=Cj0KCQjw06-oBhC6ARIsAGuzdw3Ogde4OLeSqHw6Y1LTGdBKScg9VYvyiiAOV74mYaZ6t3QUGPydNBEaAuGCEALw_wcB&gclsrc=aw.ds">Kontakt</a>
-    </nav>
     <section>
-        <h2>Strona Główna</h2>
-		<img src="5dcd1b9b583a0f4d7528f040.jpg" alt="Mercedes w124" style="width: 727px; height: 423px;"> <img src="xmercedes-124-600km.jpg.pagespeed.ic.gdqiRIVx-J.webp" alt="Mercedes w124" style="width: 727px; height: 423px;"> <img src="XDD314eae635b7698d22c703044c403522.gif" alt="Mercedes w124" style="width: 270px; height: 423px;">
-        <p>Tutaj znajdziesz informacje o naszej firmie. <br>
-            <br>
-            <br>
-            <br>
-            Mężczyźni niezależnie od siebie pracowali nad modelem pojazdu. W grudniu 1883 roku Benz założył w Mannheim firmę Benz & Co, natomiast w listopadzie 1890 roku powstała w Cannstatt firma Daimler-Motoren-Gesellschaft (DMG) należąca do Gottlieba Daimlera. Dwa lata po założeniu przedsiębiorstwa, Benz skonstruował silnik, który odpowiadał za napęd pojazdu trójkołowego. Jazda próbna zakończyła się zderzeniem ze ścianą. Gottliebowi Daimlerowi w pracach projektowych pomagał Wilhelm Maybach. Za cel postawili sobie udoskonalenie silnika Augusta Otto. W 1883 roku opatentowali szybkoobrotowy silnik spalinowy, a dwa lata później posłużył on za napęd jednośladu.
-        </p>
+        <div class="header3">
+        <h2 class="header2">Witamy na stronie piwek</h2>
+        <p>Proponowane piwka dla sora Salaha</p>
+        <h2>Lista filmów wartych obejrzenia</h2>
+        </div>
+        <table border="1">
+            <thead>
+                <tr>
+                    <!DOCTYPE html>
+<html>
+<head>
+    <style>
+        table {
+            font-family: Arial, sans-serif;
+            border-collapse: collapse;
+            width: 50%;
+        }
+        th, td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
+</head>
+<body>
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        table {
+            font-family: Arial, sans-serif;
+            border-collapse: collapse;
+            width: 50%;
+        }
+        th, td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+    </style>
+<table>
+    <thead>
+        <tr>
+            <th>Rodzaj</th>
+            <th>Nazwa Piwka</th>
+            <th>Rok produkcji</th>
+            <th>Ocena 0/10</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Bohemian Pilsner</td>
+            <td>Zwierzyniec</td>
+            <td>1950</td>
+            <td>100/10</td>
+        </tr>
+        <tr>
+            <td>Nieznany</td>
+            <td>Romper Strong</td>
+            <td>2004</td>
+            <td>2/10</td>
+        </tr>
+        <tr>
+            <td>Pils</td>
+            <td>Perła export</td>
+            <td>1946</td>
+            <td>8/10</td>
+        </tr>
+        <tr>
+            <td>Pils</td>
+            <td>Łomża</td>
+            <td>2000</td>
+            <td>10/10</td>
+        </tr>
+    </tbody>
+</table>
+</head>
+</html>
     </section>
     <footer>
-        <p>&copy; 2023 Gunioo Click</p>
+        <p>© 2023 Maksymilian Lipiec</p>
         <p>Data: <span id="currentDate"></span></p>
-        <script>
-            // JavaScript, który automatycznie ustawia aktualną datę
-            const currentDateElement = document.getElementById('currentDate');
-            const currentDate = new Date();
-            const year = currentDate.getFullYear();
-            const month = (currentDate.getMonth() + 1).toString().padStart(2, '0');
-            const day = currentDate.getDate().toString().padStart(2, '0');
-            currentDateElement.textContent = `${day}.${month}.${year}`;
-        </script>
     </footer>
+    <script>
+
+function aktualizujDate() {
+			const currentDateElement = document.getElementById("currentDate");
+			const aktualnaData = new Date();
+			currentDateElement.textContent = aktualnaData.toLocaleDateString() + " " + aktualnaData.toLocaleTimeString();
+		}
+
+		// Wywołanie funkcji aktualizującej datę na początku
+		aktualizujDate();
+
+		// Ustawienie interwału, aby odświeżać datę co sekundę
+		setInterval(aktualizujDate, 1000);
+	
+</script>
 </body>
 </html>
