--- a/index.html
+++ b/index.html
@@ -148,13 +148,12 @@
             <td>2/10</td>
         </tr>
         <tr>
-            <td>Pils</td>
+            <td rowspan="2">Pils</td>
             <td>Perła export</td>
             <td>1946</td>
             <td>8/10</td>
         </tr>
         <tr>
-            <td>Pils</td>
             <td>Łomża</td>
             <td>2000</td>
             <td>10/10</td>
