--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="center-container">
         <h2>ziomek tłumaczy sie ze nie jest pedofilem ocenka pls</h2>
         <audio controls autoplay>
-            <source src="DUBIEL ODPOWIADA NA FILM WARDĘGI! BĘDZIE POZEW #shorts.mp3" type="audio/mp3">
+            <source src="DUBIEL.mp3" type="audio/mp3">
             Twoja przeglądarka nie obsługuje odtwarzacza audio.
         </audio>
     </div>
