--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
         .center-container audio {
             margin-top: 80px;
         }
+        .torcik {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -155,7 +158,14 @@
     <div id="image-container">
         <img src="424828.3.jpg" alt="idol z malenkosci" width="560" height="315">
     </div>
-  
+        <div class="torcik">
+        <img src="TORT-Z-WÓDKĄ-700x1050.jpg" usemap="#swieczki">
+                </div>
+                <map id="swieczki">
+                  <area shape="rect" coords="119,401,176,535" href="https://d-art.ppstatic.pl/kadry/k/r/1/1c/a5/63cfb77928d02_o_large.jpg" target="_blank" alt="Pisowska Świeczka 1">
+                   <area shape="circle" coords="387,602,35" href="https://d-art.ppstatic.pl/kadry/k/r/1/3d/f2/63cfb76ede58f_o_large.jpg" target="_blank" alt="Pisowska Świeczka 2">
+                   <area shape="poly" coords="472,455,457,393,504,359,549,396,531,456" href="https://d-art.ppstatic.pl/kadry/k/r/1/17/8f/63cfb77fc0381_o_large.jpg" target="_blank" alt="Pisowska Świeczka 3">
+                </map>
     <footer>
         <p>Maksymilian Lipiec</p>
         <p>Data: <span id="currentDate"></span></p>
